<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/profileColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/select_profile_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <ImageView
        android:id="@+id/viewGreen"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="114dp"
        android:contentDescription="@string/green"
        android:tint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewYellow"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        app:srcCompat="@android:drawable/screen_background_light" />

    <ImageView
        android:id="@+id/viewYellow"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="114dp"
        android:contentDescription="@string/yellow"
        android:tint="#FFEB3B"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.745"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        app:srcCompat="@android:drawable/screen_background_light" />

    <ImageView
        android:id="@+id/viewRed"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/red"
        android:tint="#E82C1E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewBlue"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewGreen"
        app:layout_constraintVertical_bias="0.092"
        app:srcCompat="@android:drawable/screen_background_light" />

    <ImageView
        android:id="@+id/viewBlue"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/blue"
        android:tint="#1334ED"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.745"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewYellow"
        app:layout_constraintVertical_bias="0.092"
        app:srcCompat="@android:drawable/screen_background_light" />

    <ImageView
        android:id="@+id/viewOrange"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/orange"
        android:tint="#FF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/viewGrey"
        app:layout_constraintHorizontal_bias="0.598"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewRed"
        app:layout_constraintVertical_bias="0.168"
        app:srcCompat="@android:drawable/screen_background_light" />

    <ImageView
        android:id="@+id/viewGrey"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/grey"
        android:tint="#B8B8B8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.745"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewBlue"
        app:layout_constraintVertical_bias="0.168"
        app:srcCompat="@android:drawable/screen_background_light" />

</androidx.constraintlayout.widget.ConstraintLayout>
